--- a/companies-and-customers/client-management/api-reference/api.yml
+++ b/companies-and-customers/client-management/api-reference/api.yml
@@ -41,10 +41,10 @@ paths:
             examples:
               Create a company:
                 value:
-                  name: Company name
+                  name: ABC Company
                   type: COMPANY
                   legalInfo:
-                    legalName: Some company name
+                    legalName: ABC Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     registrationAgency: Comp reg agency
                     registrationId: 627e06ecf0452c2d6c0b81391
@@ -66,11 +66,11 @@ paths:
                     - id: 123e061110acd223133333345
               Create a subsidiary:
                 value:
-                  name: Subsidiary name
+                  name: ABC2 Company
                   type: SUBSIDIARY
                   parentId: 627e06ecf0452c2d6c0b81391
                   legalInfo:
-                    legalName: Some subsidiary name
+                    legalName: ABC2 Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     registrationAgency: Sub reg agency
                     registrationId: 627e06ecf0452c2d6c0b81391
@@ -118,8 +118,8 @@ paths:
       description: |-
         Retrieves all legal entities. You can filter, sort and paginate the results with query parameters.
 
-        If the `customermanagement.legalentity_read` scope is used, then all legal entities assigned to the tenant are returned. 
-        If the `customermanagement.legalentity_read_own` scope is used, then all legal entities assigned to the customer are returned. 
+        * If the `customermanagement.legalentity_read` scope is used, then all legal entities assigned to the tenant are returned. 
+        * If the `customermanagement.legalentity_read_own` scope is used, then all legal entities assigned to the customer are returned. 
 
 
         ***
@@ -290,14 +290,14 @@ paths:
             examples:
               Update the legal entity:
                 value:
-                  name: Subsidiary name
+                  name: ABC2 Company
                   type: SUBSIDIARY
                   parentId: 627e06ecf0452c2d6c0b81391
                   accountLimit:
                     currency: EUR
                     value: 1000.99
                   legalInfo:
-                    legalName: Some subsidiary name
+                    legalName: ABC2 Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     registrationAgency: Sub reg agency
                     registrationId: 627e06ecf0452c2d6c0b81391
@@ -1413,10 +1413,10 @@ components:
             Requested legal entity:
               value:
                 id: 123e06ecf0452c2d6c0b81390
-                name: Company name
+                name: ABC Company
                 type: COMPANY
                 legalInfo:
-                  legalName: Some company name
+                  legalName: ABC Company
                   registrationDate: '2022-03-31T13:18:02.379Z'
                   registrationAgency: Comp reg agency
                   registrationId: 627e06ecf0452c2d6c0b81391
@@ -1515,10 +1515,10 @@ components:
             List of legal entities:
               value:
                 - id: 123e06ecf0452c2d6c0b81390
-                  name: Company name
+                  name: ABC Company
                   type: COMPANY
                   legalInfo:
-                    legalName: Some company name
+                    legalName: ABC Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     registrationAgency: Comp reg agency
                     registrationId: 627e06ecf0452c2d6c0b81391
@@ -1529,14 +1529,14 @@ components:
                     modifiedAt: '2022-03-31T13:18:02.379Z'
                     version: 1
                 - id: 123e06ecf0452c2d6c0b12391
-                  name: Subsidiary name
+                  name: ABC2 Company
                   type: SUBSIDIARY
                   parentId: 627e06ecf0452c2d6c0b81391
                   accountLimit:
                     currency: EUR
                     value: 1000.99
                   legalInfo:
-                    legalName: Some subsidiary name
+                    legalName: ABC2 Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     taxRegistrationNumber: '4311'
                     registrationAgency: Sub reg agency
@@ -1607,10 +1607,10 @@ components:
                 id: 627e06ecf0452c2d6c0b81391
                 legalEntity:
                   id: 123e06ecf0452c2d6c0b81390
-                  name: Company name
+                  name: ABC Company
                   type: COMPANY
                   legalInfo:
-                    legalName: Some company name
+                    legalName: ABC Company
                     registrationDate: '2022-03-31T13:18:02.379Z'
                     registrationAgency: Comp reg agency
                     registrationId: 627e06ecf0452c2d6c0b81391
@@ -1701,14 +1701,14 @@ components:
                 - id: 627e06ecf0452c2d6c0b81391
                   legalEntity:
                     id: 123e06ecf0452c2d6c0b12391
-                    name: Subsidiary name
+                    name: ABC2 Company
                     type: SUBSIDIARY
                     parentId: 627e06ecf0452c2d6c0b81391
                     accountLimit:
                       currency: EUR
                       value: 1000.99
                     legalInfo:
-                      legalName: Some subsidiary name
+                      legalName: ABC2 Company
                       registrationDate: '2022-03-31T13:18:02.379Z'
                       taxRegistrationNumber: '4311'
                       registrationAgency: Sub reg agency
@@ -1732,10 +1732,10 @@ components:
                 - id: 627e06ecf0452c2d6c0b81311
                   legalEntity:
                     id: 123e06ecf0452c2d6c0b81390
-                    name: Company name
+                    name: ABC Company
                     type: COMPANY
                     legalInfo:
-                      legalName: Some company name
+                      legalName: ABC Company
                       registrationDate: '2022-03-31T13:18:02.379Z'
                       registrationAgency: Comp reg agency
                       registrationId: 627e06ecf0452c2d6c0b81391
