--- a/companies-and-customers/customer-service/api-reference/api.yml
+++ b/companies-and-customers/customer-service/api-reference/api.yml
@@ -398,7 +398,7 @@ paths:
       - $ref: '#/components/parameters/tenant'
   '/customer/{tenant}/customers/{customerNumber}/addresses':
     get:
-      summary: Retrieving a customer addresses
+      summary: Retrieving customer addresses
       responses:
         '200':
           description: OK
@@ -1442,7 +1442,7 @@ components:
       required: true
       schema:
         type: string
-      description: Address' unique identifier generated when the address is added to a customer profile.
+      description: Address unique identifier generated when the address is added to a customer profile.
     tags:
       name: tags
       in: query
