--- a/companies-and-customers/customer-service/api-reference/api.yml
+++ b/companies-and-customers/customer-service/api-reference/api.yml
@@ -540,7 +540,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Updates a specified customer address or creates a new one if it doesn't exist yet.
         ***
@@ -593,7 +593,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Updates a specified customer address.
         ***
@@ -672,7 +672,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Retrieves a specified customer address and its details.
         ***
@@ -697,7 +697,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Deletes a specified customer address.
         ***
@@ -729,7 +729,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Adds tags to a specified customer address.
         ***
@@ -752,7 +752,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_forbidden'
         '404':
-          $ref: '#/components/responses/404_address
+          $ref: '#/components/responses/404_address'
       description: |
         Deletes tags from a specified customer address.
         ***
