COP-4123 reuse existing tools and mcps durring import process

--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2347,6 +2347,7 @@ components:
             - TO_CREATE
             - ENABLED
             - DISABLED
+            - EXISTS
     JobIdResponse:
       type: object
       properties:
