--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -1544,7 +1544,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/header_Accept-Language'
       summary: Importing agents
-      operationId: PSOT-ai-import-agents
+      operationId: POST-ai-import-agents
       requestBody:
         $ref: '#/components/requestBodies/importRequestBody'
       responses:
